--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
 
             <div class="hero-img">
-                <img src="assets/img/Venkat.jpg" alt="Venkatanathan V Portfolio" width="350">
+                <img src="assets/img/Venkat.jpeg" alt="Venkatanathan V Portfolio" width="350">
             </div>
         </section>
 
