--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
 
             <div class="hero-img">
-                <img src="assets/img/Venkat.jpg" alt="Venkatanathan V Portfolio" width="350">
+                <img src="assets/img/Venkat.jpeg" alt="Venkatanathan V Portfolio" width="350">
             </div>
         </section>
 
@@ -100,13 +100,13 @@
                 <!-- Student Database Application -->
                 <div class="projects-card-box">
                     <div class="projects-card-box__icons">
-                        <i class="fa-solid fa-database"></i>
+                        <i class="fa-solid fa-book"></i>
                     </div>
                     <div class="projects-card-box__desc">
-                        <h4>Student Database Application</h4>
-                        <p>A Tkinter-based student management system with HoD and student login. 
-                           It allows student information storage, search, and access restrictions 
-                           based on specific rules. Ensures smooth UI with optimized search options.</p>
+                        <h4>Student Exchange Application</h4>
+                        <p>A Tkinter-based student inter college exchange system with HoD and student login. 
+                           It allows student information storage, search, exchange resources and access restrictions 
+                           based on specific rules and also lets student connect with each other. Ensures smooth UI with optimized search options.</p>
                     </div>
                 </div>
 
@@ -133,6 +133,19 @@
                         <p>A mobile app developed in Kotlin for Smart India Hackathon. 
                            Enables farmers to sell directly to buyers without middlemen, 
                            ensuring better pricing and fair trade.</p>
+                    </div>
+                </div>
+
+                <!-- AI FINANCE COMPANION App -->
+                <div class="projects-card-box">
+                    <div class="projects-card-box__icons">
+                        <i class="fa-solid fa-money-bill"></i>
+                    </div>
+                    <div class="projects-card-box__desc">
+                        <h4>AI BASED FINANCE COMAPNION APP</h4>
+                        <p>A web app for INTEL GEN AI Hackathon. 
+                           Enables users to analyse their potfolios and get feedbacks, 
+                           ensuring better reviews and stock management.</p>
                     </div>
                 </div>
 
