--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                 </ul>
 
                 <div class="hero-buttons">
-                    <button class="btn btn-primary">Hire me</button>
+                    <button class="btn btn-primary">MY BLOGS</button>
                     <button class="btn btn-dark-outlined">
-                        <a href="./assets/my resume/my resume.pdf" download>Download CV</a>
+                        <a href="./assets/my resume/my resume.pdf" download>Download resume</a>
                     </button>
                 </div>
             </div>
@@ -216,7 +216,7 @@
             </a> - All Rights Reserved.</p>
 
         <div class="footer-buttons">
-            <button data-theme="./assets/css/style.css" class="footer__theme1 active-theme">Theme 1</button>
+            <button data-theme="./assets/css/style.css" class="footer__theme1">Theme 1</button>
             <button data-theme="./assets/css/style-two.css" class="footer__theme2">Theme 2</button>
             <button data-theme="./assets/css/style-three.css" class="footer__theme3">Theme 3</button>
         </div>
